@@ -11,12 +11,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-package io.trino.operator.aggregation;
-
-import com.google.common.collect.ImmutableList;
-import io.trino.spi.function.AccumulatorState;
-import io.trino.spi.function.AccumulatorStateFactory;
-import io.trino.spi.function.AccumulatorStateSerializer;
+package io.trino.spi.function;
 
 import java.lang.invoke.MethodHandle;
 import java.util.ArrayList;
@@ -47,7 +42,7 @@ public class AggregationImplementation
         this.combineFunction = requireNonNull(combineFunction, "combineFunction is null");
         this.outputFunction = requireNonNull(outputFunction, "outputFunction is null");
         this.accumulatorStateDescriptors = requireNonNull(accumulatorStateDescriptors, "accumulatorStateDescriptors is null");
-        this.lambdaInterfaces = ImmutableList.copyOf(requireNonNull(lambdaInterfaces, "lambdaInterfaces is null"));
+        this.lambdaInterfaces = List.copyOf(requireNonNull(lambdaInterfaces, "lambdaInterfaces is null"));
     }
 
     public MethodHandle getInputFunction()
@@ -156,7 +151,7 @@ public class AggregationImplementation
         private Optional<MethodHandle> combineFunction = Optional.empty();
         private MethodHandle outputFunction;
         private List<AccumulatorStateDescriptor<?>> accumulatorStateDescriptors = new ArrayList<>();
-        private List<Class<?>> lambdaInterfaces = ImmutableList.of();
+        private List<Class<?>> lambdaInterfaces = List.of();
 
         private Builder() {}
 
@@ -204,12 +199,12 @@ public class AggregationImplementation
 
         public Builder lambdaInterfaces(Class<?>... lambdaInterfaces)
         {
-            return lambdaInterfaces(ImmutableList.copyOf(lambdaInterfaces));
+            return lambdaInterfaces(List.of(lambdaInterfaces));
         }
 
         public Builder lambdaInterfaces(List<Class<?>> lambdaInterfaces)
         {
-            this.lambdaInterfaces = ImmutableList.copyOf(requireNonNull(lambdaInterfaces, "lambdaInterfaces is null"));
+            this.lambdaInterfaces = List.copyOf(requireNonNull(lambdaInterfaces, "lambdaInterfaces is null"));
             return this;
         }
 
